# podcast-summary

./: Cargo.toml  README.md
docs/: architecture.md  product-requirements.md
src/: audio.rs  cli.rs  config.rs  db.rs  download.rs  error.rs  feed.rs  main.rs  models.rs  summarize.rs  transcribe.rs
src/commands/: add.rs  config_set.rs  list.rs  mod.rs  remove.rs  show.rs  sync.rs
